atualizando análises e gráficos de correlação

--- a/analise.ipynb
+++ b/analise.ipynb
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "37f1f059",
    "metadata": {},
    "outputs": [
@@ -477,12 +477,12 @@
     "from shapely import wkt\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "# 1) Ler CSV da SBN\n",
+    "# Ler CSV da SBN\n",
     "area_prioritaria_sbn = gpd.read_file(\"csvs/20250707_area-prioritaria-_sbn.csv\", delimiter=\";\")\n",
     "area_prioritaria_sbn[\"geometry\"] = area_prioritaria_sbn[\"GEOMETRIA\"].apply(wkt.loads)\n",
     "area_prioritaria_sbn = gpd.GeoDataFrame(area_prioritaria_sbn, geometry=\"geometry\", crs=\"EPSG:31983\")\n",
     "\n",
-    "# 2) Corrigir campo numérico\n",
+    "# Corrigir campo numérico\n",
     "area_prioritaria_sbn[\"SBN_INUN\"] = (\n",
     "    area_prioritaria_sbn[\"SBN_INUN\"]\n",
     "    .astype(str)\n",
@@ -491,7 +491,7 @@
     "    .astype(float)\n",
     ")\n",
     "\n",
-    "# 3) Ler UPs\n",
+    "#  Ler UPs\n",
     "ups = gpd.read_file(\"csvs/20220601_unidade_planejamento.csv\", delimiter=\";\")\n",
     "ups[\"geometry\"] = ups[\"GEOMETRIA\"].apply(wkt.loads)\n",
     "ups = gpd.GeoDataFrame(ups, geometry=\"geometry\", crs=\"EPSG:31983\")\n",
@@ -504,7 +504,7 @@
     "    predicate=\"intersects\"\n",
     ")\n",
     "\n",
-    "# 5) Agregar por UP — dissolve os polígonos da SBN dentro de cada UP\n",
+    "#  Agregar por UP  dissolve os polígonos da SBN dentro de cada UP\n",
     "sbn_por_up = sbn_up.dissolve(\n",
     "    by=\"NOME_UNID_PLANEJAMENTO\",\n",
     "    aggfunc={\n",
@@ -512,7 +512,7 @@
     "    }\n",
     ").reset_index()\n",
     "\n",
-    "# 6) Plotar\n",
+    "#  Plotar\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "\n",
     "sbn_por_up.plot(\n",
@@ -534,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "32367777",
    "metadata": {},
    "outputs": [
@@ -559,12 +559,12 @@
     "# Cria o GeoDataFrame\n",
     "bairros = gpd.GeoDataFrame(bairros, geometry=\"geometry\", crs=\"EPSG:31983\")\n",
     "\n",
-    "# === PLOTA O MAPA ===\n",
+    "# plot\n",
     "fig, ax = plt.subplots(figsize=(10, 10))\n",
     "bairros.plot(\n",
     "    ax=ax,\n",
-    "    color=\"#a8dadc\",      # verde-água clarinho\n",
-    "    edgecolor=\"gray\",     # contornos suaves\n",
+    "    color=\"#a8dadc\",      \n",
+    "    edgecolor=\"gray\",     \n",
     "    linewidth=0.5\n",
     ")\n",
     "\n",
@@ -974,8 +974,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "91032624",
+   "metadata": {},
+   "source": [
+    "1 - AQUI COMECA A RESPONDER PERGUNTA 1 - \n",
+    "Esse código serve pra juntar os dados dos bairros com as Unidades de Planejamento (UPs).\n",
+    "Como alguns bairros ficam divididos entre mais de uma UP, ele usa a porcentagem de área de cada bairro dentro da UP pra fazer uma média ponderada.\n",
+    "Assim, se um bairro está 70% numa UP e 30% em outra, o valor dele é dividido exatamente nessa proporção.\n",
+    "No final, o resultado é uma tabela com os indicadores médios de cada UP, calculados de forma proporcional à área dos bairros que fazem parte dela.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "10718e3f",
    "metadata": {},
    "outputs": [
@@ -1300,7 +1312,7 @@
     "# deve mostrar: ['ID_BAC', 'NOME', 'NOME_UNID_PLANEJAMENTO', 'perc_bairro_na_up']\n",
     "\n",
     "\n",
-    "# 2. Juntar o resumo dos bairros com a tabela de UPs\n",
+    "# Juntar o resumo dos bairros com a tabela de UPs\n",
     "\n",
     "resumo_bairros_up = resumo_bairros.merge(\n",
     "    bairros_por_up,\n",
@@ -1309,7 +1321,7 @@
     ")\n",
     "\n",
     "\n",
-    "# 3. Calcular médias ponderadas por UP\n",
+    "#  Calcular médias ponderadas por UP\n",
     "\n",
     "resumo_bairros_up[\"peso\"] = resumo_bairros_up[\"perc_bairro_na_up\"] / 100\n",
     "\n",
@@ -1349,40 +1361,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "36a3ee0c",
+   "metadata": {},
+   "source": [
+    "Esse código descobre quanto de cada bairro está dentro de cada Unidade de Planejamento (UP).\n",
+    "Primeiro ele lê os mapas dos bairros e das UPs e transforma as informações de texto em formas geométricas que o Python entende.\n",
+    "Depois ele sobrepõe os dois mapas, cortando os bairros pelas fronteiras das UPs.\n",
+    "Com isso, ele mede a área de cada pedaço e calcula a porcentagem do bairro que fica em cada UP.\n",
+    "No fim, ele salva uma tabela mostrando, por exemplo, que um bairro está 70% em uma UP e 30% em outra.\n",
+    "No final ele gera um arquivo bairros_por_up.csv\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "68e7227a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 1) Ler os CSVs\n",
+    "#  Ler os CSVs\n",
     "bairros = pd.read_csv(\"csvs/20230502_bairro_oficial.csv\")\n",
     "ups = pd.read_csv(\"csvs/20220601_unidade_planejamento.csv\")\n",
     "\n",
-    "# 2) Converter a coluna 'GEOMETRIA' de texto WKT para objetos geométricos\n",
+    "#  Converter a coluna 'GEOMETRIA' de texto WKT para objetos geométricos\n",
     "bairros[\"geometry\"] = bairros[\"GEOMETRIA\"].apply(wkt.loads)\n",
     "ups[\"geometry\"] = ups[\"GEOMETRIA\"].apply(wkt.loads)\n",
     "\n",
-    "# 3) Criar GeoDataFrames com o mesmo sistema de coordenadas (usa o mesmo CRS projetado)\n",
+    "# Criar GeoDataFrames com o mesmo sistema de coordenadas (usa o mesmo CRS projetado)\n",
     "bairros = gpd.GeoDataFrame(bairros, geometry=\"geometry\", crs=\"EPSG:31983\")\n",
     "ups = gpd.GeoDataFrame(ups, geometry=\"geometry\", crs=\"EPSG:31983\")\n",
     "\n",
-    "# 4) Corrigir eventuais geometrias inválidas\n",
+    "# Corrigir eventuais geometrias inválidas\n",
     "bairros[\"geometry\"] = bairros.buffer(0)\n",
     "ups[\"geometry\"] = ups.buffer(0)\n",
     "\n",
-    "# 5) Fazer a interseção espacial (cada pedaço do bairro que cai em uma UP)\n",
+    "# Fazer a interseção espacial (cada pedaço do bairro que cai em uma UP)\n",
     "intersec = gpd.overlay(bairros, ups, how=\"intersection\")\n",
     "\n",
     "# 6) Calcular a área de cada interseção (em m²)\n",
     "intersec[\"area_intersect\"] = intersec.geometry.area\n",
     "\n",
-    "# 7) Calcular a proporção da área de cada bairro dentro de cada UP\n",
+    "# Calcular a proporção da área de cada bairro dentro de cada UP\n",
     "area_bairro = intersec.groupby(\"ID_BAC\")[\"area_intersect\"].sum().rename(\"area_total_bairro\")\n",
     "intersec = intersec.merge(area_bairro, on=\"ID_BAC\")\n",
     "intersec[\"perc_bairro_na_up\"] = (intersec[\"area_intersect\"] / intersec[\"area_total_bairro\"]) * 100\n",
     "\n",
-    "# 8) Se quiser só o par principal (UP dominante de cada bairro)\n",
+    "#  Se quiser só o par principal (UP dominante de cada bairro)\n",
     "bairros_up = (\n",
     "    intersec.sort_values(\"perc_bairro_na_up\", ascending=False)\n",
     "    .groupby(\"ID_BAC\")\n",
@@ -1390,8 +1415,19 @@
     "    .reset_index()[[\"ID_BAC\", \"NOME\", \"NOME_UNID_PLANEJAMENTO\", \"perc_bairro_na_up\"]]\n",
     ")\n",
     "\n",
-    "# 9) Salvar resultado\n",
+    "#  Salvar resultado\n",
     "bairros_up.to_csv(\"bairros_por_up.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b94fb42c",
+   "metadata": {},
+   "source": [
+    "Esse código cria um mapa de correlação entre as variáveis numéricas do resumo por Unidade de Planejamento (UP).\n",
+    "Primeiro ele separa só as colunas com números, depois calcula a correlação entre elas , ou seja o quanto uma variável está relacionada com a outra.\n",
+    "Por fim, ele desenha um heatmap (mapa de calor) colorido: tons de vermelho mostram correlação positiva (as variáveis aumentam juntas) e tons de azul mostram correlação negativa (quando uma aumenta, a outra diminui).\n",
+    "É uma forma visual de entender quais indicadores têm comportamento parecido ou contrário dentro das UPs."
    ]
   },
   {
@@ -1439,6 +1475,18 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0593f043",
+   "metadata": {},
+   "source": [
+    "Esse código junta os dados do IQVU mais recente com o resumo das Unidades de Planejamento (UPs).\n",
+    "Primeiro ele escolhe, pra cada UP, o último ano disponível do IQVU , ou seja, a versão mais atual do índice.\n",
+    "Depois ele padroniza os nomes, deixando tudo em maiúsculas e sem espaços extras, pra evitar erro na hora de juntar.\n",
+    "Por fim, ele faz a junção das duas tabelas: o resumo das UPs de um lado e os valores do IQVU do outro.\n",
+    "O resultado é uma tabela completa, com as informações atuais de qualidade de vida associadas a cada Unidade de Planejamento."
    ]
   },
   {
@@ -1505,6 +1553,17 @@
     "\n",
     "print(dados_up.head())\n",
     "print(dados_up.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "10018ec3",
+   "metadata": {},
+   "source": [
+    "Esse código mede como cada parte do IQVU se relaciona com o risco socioambiental.\n",
+    "Ele começa listando os subíndices do IQVU (educação, habitação, infraestrutura, etc.) e depois calcula a correlação de cada um deles com o indicador de risco médio das UPs.\n",
+    "O resultado mostra quais dimensões da qualidade de vida estão mais ligadas ao aumento ou à redução do risco.\n",
+    "Por fim, ele desenha um gráfico de barras pra visualizar essas correlações: barras negativas indicam que, quando a qualidade naquela área piora, o risco tende a aumentar."
    ]
   },
   {
@@ -1583,8 +1642,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7be46042",
+   "metadata": {},
+   "source": [
+    "Esse código faz um teste de correlação de Pearson pra ver o quanto cada tipo de risco (como alagamento, deslizamento ou inundação) está ligado ao risco total das áreas.\n",
+    "Ele calcula, pra cada variável, o valor do coeficiente r, que mostra se a relação é forte e se é positiva ou negativa, e o valor-p, que indica se essa relação é estatisticamente confiável.\n",
+    "No fim, ele organiza tudo em uma tabela com os resultados e salva como uma imagem, pra visualizar de forma simples quais tipos de risco mais influenciam no risco total."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0596ac2c",
    "metadata": {},
    "outputs": [
@@ -1634,12 +1703,12 @@
     "    loc='center'\n",
     ")\n",
     "\n",
-    "# Ajustes visuais\n",
+    "\n",
     "tabela.auto_set_font_size(False)\n",
     "tabela.set_fontsize(9)\n",
     "tabela.auto_set_column_width(col=list(range(len(pearson_df.columns))))\n",
     "\n",
-    "# Cabeçalho azul com texto branco\n",
+    "\n",
     "for (row, col), cell in tabela.get_celld().items():\n",
     "    if row == 0:\n",
     "        cell.set_facecolor('#1a5276')\n",
@@ -1647,12 +1716,18 @@
     "\n",
     "plt.title(\"Teste de Correlação de Pearson – Base Área Prioritária SBN\", fontsize=12, pad=15)\n",
     "\n",
-    "# Exporta a imagem em alta qualidade\n",
+    "# Exporta a imagem \n",
     "plt.savefig(\"teste_pearson_sbn.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()\n",
     "\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9c9c215",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
