--- a/analise.ipynb
+++ b/analise.ipynb
@@ -1535,7 +1535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "a3d049b5",
    "metadata": {},
    "outputs": [
@@ -1584,7 +1584,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Exportar imagem \n",
-    "plt.savefig(\"mapa_calor_up.png\", dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(\"imgs/mapa_calor_up.png\", dpi=300, bbox_inches='tight')\n",
     "\n",
     "plt.show()\n"
    ]
@@ -1803,7 +1803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "cbab2585",
    "metadata": {},
    "outputs": [
@@ -1867,7 +1867,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Exportar imagem \n",
-    "plt.savefig(\"corr_iqvu_2016.png\", dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(\"imgs/corr_iqvu_2016.png\", dpi=300, bbox_inches='tight')\n",
     "\n",
     "plt.show()\n"
    ]
@@ -1958,7 +1958,7 @@
     "        cell.set_text_props(color='white', weight='bold')\n",
     "\n",
     "plt.title(\"Teste de Correlação de Pearson – Variáveis de Risco (SBN)\", fontsize=12, pad=15)\n",
-    "plt.savefig(\"teste_pearson_sbn.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(\"imgs/teste_pearson_sbn.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()\n",
     "\n",
     "\n",
@@ -1994,7 +1994,7 @@
     "        cell.set_text_props(color='white', weight='bold')\n",
     "\n",
     "plt.title(\"Teste de Correlação de Pearson – IQVU (2016) x Índice Total de Risco\", fontsize=12, pad=15)\n",
-    "plt.savefig(\"teste_pearson_iqvu.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.savefig(\"imgs/teste_pearson_iqvu.png\", dpi=300, bbox_inches=\"tight\")\n",
     "plt.show()\n"
    ]
   },
