--- a/analise.ipynb
+++ b/analise.ipynb
@@ -1866,9 +1866,7 @@
     "plt.ylabel(\"Subíndices do IQVU\")\n",
     "plt.tight_layout()\n",
     "\n",
-    "# Exportar imagem \n",
     "plt.savefig(\"imgs/corr_iqvu_2016.png\", dpi=300, bbox_inches='tight')\n",
-    "\n",
     "plt.show()\n"
    ]
   },
@@ -2000,12 +1998,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9c9c215",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
    "id": "6d0f0416",
    "metadata": {},
    "source": [
@@ -2054,7 +2046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "id": "99717f4d",
    "metadata": {},
    "outputs": [
@@ -2112,7 +2104,6 @@
     "    'VUL_ONDA'\n",
     "]\n",
     "\n",
-    "# Calcula o teste de Pearson\n",
     "resultados = []\n",
     "for var in variaveis_risco:\n",
     "    r, p = pearsonr(df[var], df['CON_ANT'])\n",
@@ -2124,7 +2115,6 @@
     "\n",
     "pearson_df = pd.DataFrame(resultados).sort_values(\"Coeficiente r\", ascending=False)\n",
     "\n",
-    "# Gera a imagem da tabela\n",
     "fig, ax = plt.subplots(figsize=(7, len(pearson_df)*0.45 + 1))\n",
     "ax.axis('off')\n",
     "\n",
@@ -2145,7 +2135,9 @@
     "    if row == 0:\n",
     "        cell.set_facecolor('#1a5276')\n",
     "        cell.set_text_props(color='white', weight='bold')\n",
-    "\n"
+    "\n",
+    "plt.savefig(\"imgs/teste_pearson_Q3.png\", dpi=300, bbox_inches=\"tight\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -2163,6 +2155,15 @@
     "Lembrando que a direção positiva de r indica que quanto maiores as condicionantes antrópicas, maior tende a ser o risco socioambiental (vulnerabilidade, exposição ou necessidade de SBN).\n",
     "\n",
     "Dessa forma, com base nessa análise e no teste de correlação de Pearson, foi possível identificar associações estatisticamente significativas entre as condicionantes antrópicas e a maioria dos indicadores de risco socioambiental analisados. As correlações mais fortes ocorreram para as variáveis relacionadas às Soluções Baseadas na Natureza (SBN) e à vulnerabilidade ao perigo de ondas, indicando que áreas com maior pressão antrópica também concentram maior necessidade de intervenção, pois há suscetibilidade a impactos ambientais. Assim, rejeita-se parcialmente a hipótese nula, uma vez que há evidência de que as condicionantes antrópicas influenciam diretamente o aumento do risco socioambiental em determinados contextos."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1a49066",
+   "metadata": {},
+   "source": [
+    "### Pergunta 4\n",
+    "#### De que forma alterações simuladas na infraestrutura urbana impactam o mapa de risco da cidade?"
    ]
   }
  ],
