tinha esquecido um "\n"

--- a/analise.ipynb
+++ b/analise.ipynb
@@ -2015,9 +2015,10 @@
     "\n",
     "![](imgs/correlacaoEntreSubindices.jpeg)",
     "\n",
+    "\n",
     "A pergunta dois foi respondida com base na análise supracitada na pergunta um e tendo em vista esse gráfico que ilustra a correlação entre subíndices do IQVU e o risco socioambiental médio\n",
     "\n",
-    "A partir das correlações calculadas, foi possível identificar quais variáveis urbanas exercem maior influência sobre a vulnerabilidade socioambiental. Entre os subíndices do IQVU, educação e meio ambiente foram os que apresentaram as relações mais expressivas com o risco médio. O subíndice de educação apresentou correlação positiva moderada, indicando que regiões com melhores condições educacionais tendem a ter menor exposição a riscos. Isso sugere que o acesso à educação atua como um fator de proteção, ampliando a capacidade de adaptação das populações e contribuindo para práticas mais conscientes de prevenção e gestão urbana.\n",
+    "Dessa forma, a partir das correlações calculadas, foi possível identificar quais variáveis urbanas exercem maior influência sobre a vulnerabilidade socioambiental. Entre os subíndices do IQVU, educação e meio ambiente foram os que apresentaram as relações mais expressivas com o risco médio. O subíndice de educação apresentou correlação positiva moderada, indicando que regiões com melhores condições educacionais tendem a ter menor exposição a riscos. Isso sugere que o acesso à educação atua como um fator de proteção, ampliando a capacidade de adaptação das populações e contribuindo para práticas mais conscientes de prevenção e gestão urbana.\n",
     "\n",
     "Em contrapartida, o subíndice de meio ambiente apresentou a correlação negativa mais acentuada, evidenciando que áreas com piores condições ambientais são também as mais suscetíveis a impactos, como alagamentos, deslizamentos e ondas de calor. Essa relação reforça que a degradação ambiental não apenas expressa desigualdades territoriais, mas também intensifica a vulnerabilidade socioambiental.\n",
     "\n",
