--- a/analise.ipynb
+++ b/analise.ipynb
@@ -1996,6 +1996,40 @@
     "plt.show()\n"
    ]
   },
+{
+  "cell_type": "markdown",
+  "id": "5f2a1b12",
+  "metadata": {},
+  "source": [
+    "### Pergunta 1\n",
+    "\n",
+    "É possível construir um modelo preditivo que identifique bairros com potencial de se tornarem áreas de alto risco socioambiental nos próximos anos? Seria respondido mediante os atributos que designam o risco de ocorrer inundação, alagamento, deslizamento em uma área e desses valores é possível definir se uma área sofrerá constantemente com causas geológicas no futuro.\n",
+    "\n",
+    "Antes de analisar as relações entre risco socioambiental e condições urbanas, foi preciso padronizar os dados no mesmo nível territorial. Enquanto o IQVU é calculado por Unidade de Planejamento (UP), outros indicadores estavam por bairro. Para compará-los, os dados de bairro foram convertidos em médias ponderadas por UP, usando como peso a proporção de área que cada bairro ocupa dentro da unidade. Isso garantiu que regiões maiores tivessem mais influência nos resultados e evitou distorções.\n",
+    "\n",
+    "Com os dados consolidados por UP, foi feita uma análise exploratória para identificar como os indicadores socioambientais se relacionam entre si. Foram mantidas apenas as variáveis numéricas e retiradas as que indicavam áreas prioritárias de Soluções Baseadas na Natureza (SBN), pois representam propostas de intervenção e não riscos diretos.\n",
+    "\n",
+    "![](imgs/correlacaoEntreVariaveisMedias.png)\n",
+    "\n",
+    "A partir disso, foi construída uma matriz de correlação e um mapa de calor para visualizar as relações entre os indicadores. As correlações positivas e fortes mostraram que diferentes tipos de risco, como alagamento, deslizamento ou ondas de calor, tendem a ocorrer nas mesmas regiões. Isso indica que as vulnerabilidades urbanas são interligadas e refletem condições estruturais comuns, como adensamento, falta de drenagem e escassez de áreas verdes.\n",
+    "\n",
+    "![](imgs/correlacaoSubindVariaveisMedias.png)\n",
+    "\n",
+    "Na sequência, os dados socioambientais foram comparados aos subíndices do IQVU de 2016 (educação, habitação, infraestrutura, meio ambiente, saúde e serviços). As correlações, em geral, foram baixas ou negativas: áreas com piores condições urbanas também são as mais expostas a riscos e vulnerabilidades. Educação mostrou correlação positiva moderada, sugerindo que o acesso à educação tende a reduzir a exposição e a vulnerabilidade. Já habitação, infraestrutura e saúde apresentaram correlações fracas e negativas, reforçando a relação entre precariedade urbana e risco.\n",
+    "\n",
+    "Esses resultados confirmam que as desigualdades urbanas e ambientais em Belo Horizonte se sobrepõem: as regiões com menor qualidade de vida são também as mais vulneráveis aos impactos socioambientais.\n",
+    "\n",
+    "Foram feitos testes de correlação de Pearson para verificar se existe relação entre os diferentes tipos de risco socioambiental da base SBN e também entre esses riscos e os subíndices do IQVU de 2016. O teste mostra se duas variáveis andam juntas — por exemplo, se quando uma aumenta a outra também tende a aumentar.\n",
+    "\n",
+    "A hipótese nula (H₀) diz que não existe relação significativa entre as variáveis.\n",
+    "A hipótese alternativa (H₁) diz que existe uma relação significativa.\n",
+    "Foi usado um nível de confiança de 95%.\n",
+    "\n",
+    "Nos resultados da base SBN, quase todas as variáveis tiveram correlações positivas e altas com o índice total de risco, e valores-p muito baixos (menores que 0,001). Isso indica que os diferentes tipos de risco aparecem nas mesmas regiões, ou seja, onde há um problema, normalmente existem outros também.\n",
+    "\n",
+    "Já na comparação com o IQVU, as correlações foram baixas e, em alguns casos, negativas. Isso mostra que as áreas com piores condições urbanas tendem a ter maiores riscos ambientais, mas essa relação não é forte nem uniforme."
+  ]
+},
   {
   "cell_type": "markdown",
   "id": "6d0f0416",
