--- a/analise.ipynb
+++ b/analise.ipynb
@@ -1997,15 +1997,15 @@
    ]
   },
   {
-  "cell_type": "markdown",
-  "id": "6d0f0416",
-  "metadata": {},
-  "source": [
+   "cell_type": "markdown",
+   "id": "6d0f0416",
+   "metadata": {},
+   "source": [
     "### Pergunta 2\n",
     "\n",
-    "#### Quais são as variáveis urbanas e sociais com maior poder de influência na determinação da vulnerabilidade? Um estudo será feito em torno das variáveis de risco para dizer qual contribui mais para a ocorrência de vulnerabilidade.",
+    "#### Quais são as variáveis urbanas e sociais com maior poder de influência na determinação da vulnerabilidade? Um estudo será feito em torno das variáveis de qualidade de vida em relação ao risco naquela área, para dizer qual contribui mais para a ocorrência de vulnerabilidade.\n",
     "\n",
-    "![](imgs/correlacaoEntreSubindices.jpeg)",
+    "![](imgs/correlacaoEntreSubindices.jpeg)\n",
     "\n",
     "\n",
     "A pergunta dois foi respondida com base na análise supracitada na pergunta um e tendo em vista esse gráfico que ilustra a correlação entre subíndices do IQVU e o risco socioambiental médio\n",
@@ -2017,7 +2017,7 @@
     "Os subíndices de habitação, infraestrutura e saúde mostraram correlações negativas mais discretas, o que indica uma influência indireta sobre os níveis de vulnerabilidade, enquanto serviços apresentou correlação próxima de zero, sugerindo uma relação menos significativa.\n",
     "\n",
     "De forma geral, esses resultados confirmam que a vulnerabilidade socioambiental em Belo Horizonte está associada a um conjunto de fatores interligados, em que a qualidade ambiental e o acesso à educação se destacam como dimensões centrais. A partir dessa análise, essas variáveis podem ser priorizadas em estudos preditivos, contribuindo para a identificação de áreas com maior potencial de se tornarem zonas de risco e para o direcionamento de políticas públicas mais eficazes de mitigação e adaptação."
-  ]
+   ]
   },
   {
    "cell_type": "markdown",
