--- a/analise.ipynb
+++ b/analise.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "## Primeiras Explorações\n",
     "\n",
-    "Iniciamos fazendo algumas explorações sob as bases e de como usar a biblioteca geopandas para visualizar mapas, essa parte não influencia muito na análise exploratório e testes de hipóteses a frente, é mais para ter conhecimento das bases e de como podemos aproveitá-las na etapa 3 do trabalho. A partir da seção 2, já é mais direcionado para a etapa 2 do referente trabalho."
+    "Iniciamos fazendo algumas explorações sob as bases e olhamos de como é a aplicação da biblioteca geopandas para visualizar mapas, essa parte não influencia muito na análise exploratório e testes de hipóteses a frente, é mais para ter conhecimento das bases e de como podemos aproveitá-las na etapa 3 do trabalho. A partir da seção 2, já é mais direcionado para a etapa 2 do referente trabalho."
    ]
   },
   {
@@ -1719,6 +1719,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cb0e5952",
+   "metadata": {},
+   "source": [
+    "Esse código faz uma análise de correlação entre os subíndices do IQVU (educação, habitação, infraestrutura, meio ambiente, saúde e serviços) e um conjunto de variáveis socioambientais referentes ao ano de 2016. Primeiro, ele filtra a base de dados original para considerar apenas as observações desse ano e define quais colunas representam os subíndices do IQVU. Em seguida, remove variáveis que não devem entrar na análise, como identificadores e colunas de controle, além de excluir aquelas que começam com “SBN”, focando apenas nas variáveis numéricas relevantes. Depois, ele calcula a matriz de correlação entre os subíndices e as demais variáveis socioambientais, identificando o grau e a direção das relações lineares entre eles. Por fim, o código gera um heatmap que visualiza essas correlações de forma intuitiva, destacando quais dimensões do IQVU estão mais associadas às condições socioambientais das áreas analisadas em 2016, e salva o gráfico em uma imagem."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 29,
    "id": "cbab2585",
@@ -1971,7 +1979,7 @@
     "![](imgs/correlacaoEntreSubindices.jpeg)\n",
     "\n",
     "\n",
-    "A pergunta dois foi respondida com base na análise feita na pergunta um e tendo em vista esse gráfico que ilustra a correlação entre subíndices do IQVU e o risco socioambiental médio\n",
+    "A pergunta 2 foi respondida com base na análise feita na pergunta 1 e tendo em vista esse gráfico que ilustra a correlação entre subíndices do IQVU e o risco socioambiental médio\n",
     "\n",
     "Dessa forma, a partir das correlações calculadas, foi possível identificar quais variáveis urbanas exercem maior influência sobre a vulnerabilidade socioambiental. Entre os subíndices do IQVU, educação e meio ambiente foram os que apresentaram as relações mais expressivas com o risco médio. O subíndice de educação apresentou correlação positiva moderada, indicando que regiões com melhores condições educacionais tendem a ter menor exposição a riscos. Isso sugere que o acesso à educação atua como um fator de proteção, ampliando a capacidade de adaptação das populações e contribuindo para práticas mais conscientes de prevenção e gestão urbana.\n",
     "\n",
@@ -2195,7 +2203,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2209,7 +2217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
