--- a/analise.ipynb
+++ b/analise.ipynb
@@ -7,7 +7,12 @@
    "source": [
     "---\n",
     "Análise exploratória e Testes de Hipóteses \n",
-    "---"
+    "---\n",
+    "\n",
+    " - Arthur Henrique Quaresma;\n",
+    " - Ian Godoi;\n",
+    " - Luana Ribeiro Palhares;\n",
+    " - Luiz Felipe Gontijo Soares;"
    ]
   },
   {
